--- a/.github/workflows/on-prem.yml
+++ b/.github/workflows/on-prem.yml
@@ -1,32 +1,34 @@
-name: Build On-Prem Network Diagram
+name: Generate On-Prem Network Diagram
 
 on:
   push:
     paths:
       - 'diagrams/onprem_network_architecture.py'
-  workflow_dispatch:
 
 jobs:
-  build-onprem:
+  generate-diagram:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: '3.10'
 
-      - name: Install dependencies
-        run: |
-          pip install diagrams
+      - name: Install Graphviz
+        run: sudo apt-get update && sudo apt-get install -y graphviz
 
-      - name: Generate On-Prem Diagram
-        run: |
-          python diagrams/onprem_network_architecture.py
+      - name: Install Python dependencies
+        run: pip install diagrams
 
-      - name: Upload diagram
+      - name: Run diagram script
+        run: python diagrams/onprem_network_architecture.py
+
+      - name: Upload diagram artifact
         uses: actions/upload-artifact@v4
         with:
           name: onprem-diagram
-          path: onprem_network_architecture.png
+          path: on-prem-network-architecture.png
