--- a/.github/workflows/diagram.yml
+++ b/.github/workflows/diagram.yml
@@ -1,37 +1,45 @@
-name: Generate Hybrid Network Diagram
+name: Generate Network Diagram
 
 on:
   push:
     paths:
-      - 'diagrams/hybrid_network_architecture.py'
+      - 'configs/**.yml'
+      - 'configs/**.yaml'
+      - 'configs/**.json'
+      - 'src/**.py'
   workflow_dispatch:
 
 jobs:
-  generate-diagram:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install diagrams graphviz
+      - name: Install Graphviz and Python dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y graphviz
+          pip install -r requirements.txt
 
-    - name: Install Graphviz
-      run: sudo apt-get install -y graphviz
+      - name: Generate network diagrams
+        run: |
+          mkdir -p outputs
+          for cfg in configs/*.{yml,yaml,json}; do
+            [ -e "$cfg" ] || continue
+            fname=$(basename "$cfg" | sed 's/\.[^.]*$//')
+            python src/main.py --config "$cfg" --output "outputs/${fname}.png"
+          done
 
-    - name: Generate diagram
-      run: python diagrams/hybrid_network_architecture.py
-
-    - name: Upload diagram artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: hybrid-network-diagram
-        path: hybrid-network-architecture.png
+      - name: Commit and push generated diagrams
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "actions@github.com"
+          git add outputs/*.png
+          git commit -m "🔄 Auto-generate diagrams [skip ci]" || echo "No changes to commit"
+          git push
