--- a/.github/workflows/diagram.yml
+++ b/.github/workflows/diagram.yml
@@ -40,6 +40,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "actions@github.com"
-          git add outputs/*.png
+          git add -f outputs/*.png
           git commit -m "🔄 Auto-generate diagrams [skip ci]" || echo "No changes to commit"
           git push
